<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:scaleType="center"
        app:backgroundTint="@android:color/holo_green_dark"
        app:fabSize="normal"
        app:rippleColor="@android:color/background_light"
        app:srcCompat="@drawable/add_article" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:visibility="gone" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.freeteam01.androidnewsgroupreader.MainActivity">

        <TextView
            android:id="@+id/tv_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <TextView
            style="@style/Headline"
            android:text="@string/newsgroupseverprompt" />

        <Spinner
            android:id="@+id/newsgroupsserver_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Headline"
            android:text="@string/newsgroupprompt" />

        <Spinner
            android:id="@+id/newsgroups_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_const_article"
                style="@style/Headline"
                android:text="@string/articles" />

            <Spinner
                android:id="@+id/spinner_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_const_article"
                android:layout_alignTop="@+id/tv_const_article"
                android:layout_toRightOf="@+id/tv_const_article" />

        </RelativeLayout>

        <ListView
            android:id="@+id/treeList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>
