<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="100dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="100dp">

    <TextView
        android:id="@+id/tv_const_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/subject"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_roundedbg"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="1"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:windowSoftInputMode="stateUnchanged" />

    <TextView
        android:id="@+id/tv_const_article_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/article_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_roundedbg"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="10"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:windowSoftInputMode="stateUnchanged" />

    <ImageButton
        android:id="@+id/btn_article_send"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/ic_menu_send" />

</LinearLayout>